chore: gradle structure allows future subprojects